# antivirus

./: CMakeLists.txt  README.md  antivirus.cpp  antivirus.h  main.cpp  testfile1.txt  testfile2.txt  testfile3.txt
